# sgv-migrate

./: Cargo.toml  LICENSE  README.md
migrations/: 0001_create_users.sql  0002_create_roles.sql  0003_create_groups.sql
src/: main.rs  migration.rs
